--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-    'name': 'Hot Pants FC',
-    'version': '0.1',
-    'description': 'IBM Marketplace Products And Services',
-    'engines': {
-        'node': 6.9'
-    'scripts': {
-    }   
+  "name": "Hot_Pants_FC",
+  "version": "0.0.1",
+  "description": "Hot Pants FC",
+  "engines": {
+    "node": "6.9"
+  },
+  "scripts": {
+    "watch": "sass --watch src/styles:dist",
+    "prewatch": "sass src/styles/main.scss dist/main.css",
+    "lint": "scss-lint src/styles/*"
+  },
+  "devDependencies": {
+  }
 }
