1st pass at moving to streams

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "autoprefixer": "^6.7.3",
     "eslint": "^3.17.1",
     "scss-lint": "^0"
+  },
+  "dirs": {
+    "views": "/src/views"
   }
 }
