--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "autoprefixer": "^6.7.3",
     "eslint": "^3.17.1",
     "scss-lint": "0.38.0"
+  },
+  "dependencies": {
+    "access-log": "^0.3.9"
   }
 }
